# chainer

chainerx_cc/: CMakeLists.txt
chainerx_cc/chainerx/: CMakeLists.txt  context.cc
chainerx_cc/chainerx/xrt/: CMakeLists.txt  col2im.cc  col2im.h  data_type.h  elementwise.h  im2col.cc  im2col.h  reduce.h  tensor_dot.cc  tensor_dot.h  xrt_backend.cc  xrt_backend.h  xrt_backend_test.cc  xrt_device.cc  xrt_device.h  xrt_device_test.cc  xrt_local_serivce.cc  xrt_local_service.h  xrt_local_service_test.cc
chainerx_cc/chainerx/xrt/xrt_device/: activation.cc  arithmetic.cc  comparison.cc  conv.cc  copy.cc  dot.cc  exp_log.cc  fill.cc  indexing.cc  memory.cc  misc.cc  pool.cc  reduction.cc
chainerx_cc/cmake/: FindTensorflow.cmake
